k8s/prod/s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumio-s3
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "1000"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: lumio.ru
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: '*.lumio.ru'
spec:
  ingressClassName: traefik
  rules:
    - host: s3.lumio.ru
      http:
        paths:
          - path: /lumio/
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
