k8s/prod/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: lumio.nightnoryu.com
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: '*.lumio.nightnoryu.com'
    traefik.ingress.kubernetes.io/router.middlewares: lumio-compress@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: 'lumio.nightnoryu.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lumio-web
                port:
                  number: 8080
    - host: 'app.lumio.nightnoryu.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lumio-web
                port:
                  number: 8080
    - host: '*.lumio.nightnoryu.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lumio-web
                port:
                  number: 8080
